# SVDquest

./: .gitignore  .travis.yml  README.md  WORKSPACE  bazel-SVDquest  bazel-bin  bazel-out  bazel-testlogs  bazel.travis.rc
src/: BUILD  CMakeLists.txt  SVDQuest.cpp  SVDQuestTripartitionScorer.cpp  SVDQuestTripartitionScorer.hpp
test_data/mammalian424/: README  genetrees
test_data/mammalian424/expected/: mammalian.greedy  mammalian.majority  mammalian.pauptree  mammalian.single  mammalian.strict  mammalian.svdquest.quartets  mammalian.timing
